'overflow: auto' added as stopgap styling for SignUp modal

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -101,6 +101,7 @@
      margin: 0 auto;
      border-radius: 10px;
      background-color: gray;
+     overflow: auto;
  }
 
  .user_form {
